# MemoAi

./: .env.example  .gitignore  README.md  ai_services.py  app.py  contact.html  debug_output.txt  explore_vectors.py  faiss.index  index.html  inspect_db.py  login.html  memoai.db  memory.json  migrate_to_vector.py  min_pinecone_test.py  models.py  pyproject.toml  register.html  requirements.txt  script.js  styles.css  test.ipynb  test_image.py  test_services.py  vector_index.faiss  vector_store.py
backend/: __init__.py  config.py  processor.py
static/css/: styles.css
static/js/: script.js
templates/: contact.html  index.html  login.html  register.html
